>>1.9.8
 - Preliminary support for calling indels with discover-sequence-variants.  Candidate indels are now written
   in the formats that use GenotypeOutputFormat (e.g., genotypes, compare_groups, allele_frequency).
   The method of Krawitz et al is used to determine the equivalent indel region for each possible candidate.
   After possible realignment, and filtering to remove possible errors, EIR are reported with their frequencies.
 - Proof of principle that protocol buffer can seamlessly cohabit with data-specific compression schemes. The
   --codec option on fasta-to-compact is introduced to activate compression of reads when writing compact reads.
   The codec provided (called read-codec-1) achieves about 10% better compression of read files than pure
   protocol-buffer encoding. This read-codec-1 codec stores bases and quality scores with an arithmetic coder in
   the special compressed_data protocol buffer field.
 - Fixed a bug with ReadsQualityStatsMode when when SampleFraction == 1.0d, such as for files with a small
   number of reads.
 - Upgraded to SAM JDK 1.52
 - Modes sam-to-compact and sam-extract-reads now set SILENT validation before reading file header. This is required
   because the SAM JDK validation rules are more stringent than required by the specification. This means that
   some valid SAM files (per the SAM spec) cannot be parsed without error when the strict validation is used.
 - Fixed an issue with ReformatCompactReads when no quality scores exist.
1.9.7.3
 - Fix allele frequency format to write genotype first in FORMAT per vcf spec.
 - Add new INFO fields in compare group vcf format to show allele counts in each group.
 - Ability to support short versions of mode names, such as "compact-file-stats" has the short mode
   name "cfs". There is a default short mode name generation implementation in
   AbstractCommandLineMode.getShortModeName() but each mode class can override this method in the case