@@ -1,4 +1,8 @@
 >>1.9.8
+ - New mode sample-quality-scores that will read the first n (defaults to 10,000) entries of a compact-reads
+   or fastq file and report the minimum, maximum, and average quality score value and provide a guess at
+   the quality encoding scheme (Phred, Sanger, Illumina/Solexa). It's worth noting that compact-reads files,
+   if created correctly, should always report Phred.
  - Preliminary support for calling indels with discover-sequence-variants.  Candidate indels are now written
    in the formats that use GenotypeOutputFormat (e.g., genotypes, compare_groups, allele_frequency).
    The method of Krawitz et al is used to determine the equivalent indel region for each possible candidate.
